link tra pagine

--- a/Lezione 5 - FrontEnd/mappa.html
+++ b/Lezione 5 - FrontEnd/mappa.html
@@ -54,6 +54,6 @@
 <script>
 	    var map = L.map('mapid').setView([51.505, -0.09], 13);
 	    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-        L.marker([51.5, -0.09]).addTo(map).bindPopup(`a pretty CSS3 popup.<br> Easily customizable`)
+        L.marker([51.5, -0.09]).addTo(map).bindPopup('<a href = "grafico.html"> Sensor data </a>')
 </script>
 </html>
